# Space-Sandbox-Simulation

./: .gitignore  BuildErrors.txt  CMakeLists.txt  ENGINE_BACKEND.md  ENGINE_DOCUMENTATION.txt  PROGRESS.md  README.md  build.bat  build_glfw.bat  engine_config.json  imgui.ini  run.bat  setup.bat  setup_freetype.bat
docs/: DevelopmentGuide.md  ProjectOverview.md  UserGuide.md
include/: Body.h  Camera.h  EngineBackend.h  EngineConfig.h  Grid.h  Mesh.h  Renderer.h  Simulator.h  TextRenderer.h  Vector.h  World.h
include/glad/: glad.h
shaders/: fragment.glsl  grid.frag  grid.vert  vertex.glsl
src/: Body.cpp  EngineBackend.cpp  EngineConfig.cpp  Grid.cpp  Grid.h  Mesh.cpp  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Simulator.cpp  TextRenderer.cpp  TextRenderer.h  World.cpp  glad.c  main.cpp
src/gui/: MainWindow.cpp  MainWindow.h  OpenGLWidget.cpp  OpenGLWidget.h
src/imgui/: ImGuiManager.cpp  ImGuiManager.h
